--- a/README
+++ b/README
@@ -5,5 +5,6 @@ Set of configuration files for :
     bash
 
 INSTALL
-To copy the files in home directory:
-$>make install
+$>make install-dotfiles : copy emacs and bash configuration files
+
+$>make install-awesome : copy and replace awesome config files
